# slidecap

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
slidecap/: __init__.py  cli.py  core.py
